@@ -1,3 +1,6 @@
+2009-01-04 Stephen Sinclair <radarsat1@gmail.com>
+	* Add checks to configure.ac for select() and poll().
+
 2008-12-23  Nicholas Humfrey  <njh@aelius.com>
 	* Added a function called lo_server_wait() which waits for a message to be received.
 
